utilities/dataOrganization/flywheel/logs/fw_download.21684294.err
  File "download_from_flywheel.py", line 354
    for anatroot, folders, files in os.walk(anatomicalpath);
                                                           ^
SyntaxError: invalid syntax
